# agos

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  agos.spec  agos_entry.py  demo.py  docker-compose.multi.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  evolve.yml
agos/: __init__.py  config.py  demo.py  exceptions.py  os_agent.py  serve.py  updater.py
agos/a2a/: models.py  server.py
agos/ambient/: watcher.py
agos/cli/: context.py  intent.py  main.py  system.py
agos/coordination/: team.py
agos/dashboard/: app.py
agos/evolution/: analyzer.py  code_analyzer.py  codegen.py  contribute.py  engine.py  integrator.py  llm_provider.py  meta.py  pipeline.py  repo_scout.py  sandbox.py  scout.py  state.py
agos/intent/: engine.py  proactive.py
agos/kernel/: agent.py  runtime.py
agos/knowledge/: episodic.py  graph.py  manager.py  note.py  semantic.py
agos/llm/: anthropic.py  base.py
agos/policy/: audit.py  engine.py  schema.py
agos/processes/: registry.py  workload.py
agos/sandbox/: runner.py
agos/tools/: builtins.py  registry.py  schema.py
agos/triggers/: file_watch.py  manager.py
community/contributions/: 167b941e3848.json  1c0c06dc32d4.json  1e2bf14ed6bb.json  4d42b8932926.json  a735fbad120f.json  afae799643e5.json  c10a2d2232eb.json  c3b83caee808.json  c8f2e5b5574a.json  cabb64de90e3.json  e120f1f3a28f.json
scripts/: harvest.py  monitor.py
tests/: conftest.py  test_integration.py  test_updater.py
tests/a2a/: test_models.py  test_server.py
tests/ambient/: test_watcher.py
(+275 files in other folders)
