[project]
name = "agos"
version = "0.1.0"
description = "agos — Your personal AI team. An intelligence layer, not a library."
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
    "anthropic>=0.40.0",
    "typer[all]>=0.12.0",
    "rich>=13.9.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "aiosqlite>=0.20.0",
    "orjson>=3.10.0",
    "structlog>=24.4.0",
    "httpx>=0.27.0",
    "packaging>=24.0",
]

[project.urls]
Homepage = "https://github.com/aliveclaw/agos"
Repository = "https://github.com/aliveclaw/agos"
Issues = "https://github.com/aliveclaw/agos/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
]

[project.scripts]
agos = "agos.cli.main:app"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
